# task-tracker-backend

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: black.yml  ci.yml  flake8.yml
src/: config.py  database.py  main.py  models.py  schemas.py  services.py
src/endpoints/: tasks.py  users.py
