[tool.poetry]
name = "task-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Danis Idiatullin <danisidiatullin1993@gmail.com>"]
readme = "README.md"
packages = [{include = "task_tracker_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.2"
sqlalchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
