[tool.poetry]
name = "task-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Danis Idiatullin <danisidiatullin1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.2"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/tests",
]


[tool.black]
line-length = 120


[tool.isort]
profile = "black"
line_length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
